# svelte_tauri_app_template

./: .gitignore  QUICK_START.md  README.md  package-lock.json  package.json  svelte.config.js
icon_generator/: .gitignore  README.md  generate_icons.bat  generate_icons.py  setup.bat  setup.py
src-tauri/: .tauriignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  machines.rs  settings.rs  sync.rs  users.rs  work_types.rs
src/lib/i18n/: en.json  it.json
src/routes/: +layout.svelte
src/routes/about/: +page.svelte
src/routes/home/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/machine_man/machine_list/: +page.svelte
src/routes/settings/machine_man/new_machine/: +page.svelte
src/routes/settings/machine_man/works_type/: +page.svelte
src/routes/settings/machine_man/works_type/edit/: +page.svelte
src/routes/settings/machine_man/works_type/new/: +page.svelte
src/routes/settings/user_man/edit/[id]/: +page.svelte
src/routes/settings/user_man/user_list/: +page.svelte
