[package]
name = "svelte-tauri-template"
version = "1.0.0"
description = "Un template moderno per applicazioni Svelte + Tauri"
authors = ["Template Author"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
once_cell = "1.19"

# File dialog
rfd = "0.14"

# Postgres DB dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }

# Password hashing
bcrypt = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# SQLite for local config
rusqlite = { version = "0.29", features = ["bundled"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
